# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import menuRouter from "./menu";
+import ordersRouter from "./orders";
+import queueRouter from "./queue";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(menuRouter);
+router.use(ordersRouter);
+router.use(queueRouter);
+router.use(adminRouter);
 
 export default router;
